# ambiq-apollo4p-pac

./: Cargo.toml  README.md  build.rs  device.x
src/: adc.rs  apbdma.rs  audadc.rs  clkgen.rs  cpu.rs  crypto.rs  dc.rs  dsi.rs  dsp.rs  fpio.rs  gpio.rs  gpu.rs  i2s0.rs  iom0.rs  ioslave.rs  lib.rs  mcuctrl.rs  mspi0.rs  pdm0.rs  pwrctrl.rs  rstgen.rs  rtc.rs  sdio.rs  security.rs  stimer.rs  timer.rs  uart0.rs  usb.rs  usbphy.rs  vcomp.rs  wdt.rs
src/adc/: calctrl.rs  cfg.rs  dmacfg.rs  dmatrigen.rs  fifo.rs  fifopr.rs  gain.rs  intclr.rs  inten.rs  intset.rs  intstat.rs  inttrigtimer.rs  satclr.rs  satlim.rs  sl0cfg.rs  sl1cfg.rs  sl2cfg.rs  sl3cfg.rs  sl4cfg.rs  sl5cfg.rs  sl6cfg.rs  sl7cfg.rs  stat.rs  swt.rs  wulim.rs  zxcfg.rs  zxlim.rs
src/apbdma/: bbinput.rs  bbsetclear.rs  bbvalue.rs  debug.rs  debugdata.rs
src/audadc/: cfg.rs  dataoffset.rs  dmacfg.rs  dmastat.rs  dmatargaddr.rs  dmatotcount.rs  dmatrigstat.rs  fifo.rs  fifopr.rs  fifostat.rs  gain.rs  gaincfg.rs  intclr.rs  inten.rs  intset.rs  intstat.rs  inttrigtimer.rs  satcfg.rs  satlim.rs  satmax.rs  scwlim.rs  sl0cfg.rs  sl1cfg.rs  sl2cfg.rs  sl3cfg.rs  sl4cfg.rs  sl5cfg.rs  sl6cfg.rs  sl7cfg.rs  stat.rs  swt.rs  wllim.rs  zxlim.rs
src/clkgen/: clkgenspares.rs  clkout.rs  clocken2stat.rs  clocken3stat.rs  clockenstat.rs  dispclkctrl.rs  hf2adj0.rs  hf2adj1.rs  hf2adj2.rs  hf2val.rs  hfadj.rs  hfrcidlecounters.rs  intrptclr.rs  intrpten.rs  intrptset.rs  intrptstat.rs  lfrcctrl.rs  misc.rs  octrl.rs
src/cpu/: cachecfg.rs  cachectrl.rs  daxicfg.rs  daxictrl.rs  dcodefaultaddr.rs  dmon0.rs  (+20 more)
(+1381 files in other folders)
